--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
     <section class="form">
         <form class="number-input">
-            <input type="text" id="input-state" placeholder="Search a State" required/>
+            <input type="text" id="input-state" placeholder="Search a State e.g. NY" required/>
             <input type="text" id="input-number" placeholder="10"/>
             <button id="searchState">Submit</button>
             
