--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <div class="container">
     <section class="form">
         <form class="number-input">
-            <input type="text" id="input-state" placeholder="Search a State e.g. NY VT" required/>
+            <input type="text" id="input-state" placeholder="Search a State e.g. NY, VT" required/>
             <input type="text" id="input-number" placeholder="10"/>
             <button id="searchState">Submit</button>
+            <p>Enter states by state abbreviation. If searching multiple states, separate by a comma.</p>
             
         </form>
     </section id="results">
